--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,6 @@ html, body {
   color: #222;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow-x: hidden;
 }
 
 #root {
